# bifunctor-classes-compat

./: CHANGELOG.markdown  LICENSE  README.markdown  bifunctor-classes-compat.cabal
.github/workflows/: haskell-ci.yml
old-src/ghc801/Data/: Bitraversable.hs
