cabal-version:      1.24
name:               bifunctor-classes-compat
version:            0.1.1
synopsis:           Compatibility package for the Bifunctor, Bifoldable, and Bitraversable classes
description:        Compatibility package for the @Bifunctor@, @Bifoldable@,
                    and @Bitraversable@ classes. See the
                    @<http://hackage.haskell.org/package/bifunctors bifunctors>@
                    library for additional @Bifunctor@-related utilities.
stability:          provisional
homepage:           https://github.com/haskell-compat/bifunctor-classes-compat
bug-reports:        https://github.com/haskell-compat/bifunctor-classes-compat/issues
license:            BSD3
license-file:       LICENSE
author:             Edward A. Kmett
maintainer:         Ryan Scott <ryan.gl.scott@gmail.com>
copyright:          Copyright (C) 2008-2023 Edward A. Kmett
category:           Data, Functors
build-type:         Simple
tested-with:        GHC == 8.0.2
                  , GHC == 8.2.2
                  , GHC == 8.4.4
                  , GHC == 8.6.5
                  , GHC == 8.8.4
                  , GHC == 8.10.7
                  , GHC == 9.0.2
                  , GHC == 9.2.8
                  , GHC == 9.4.8
                  , GHC == 9.6.7
                  , GHC == 9.8.4
                  , GHC == 9.10.3
                  , GHC == 9.12.2
                  , GHC == 9.14.1
extra-source-files:
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: https://github.com/haskell-compat/bifunctor-classes-compat.git

flag tagged
  default: True
  manual: True
  description:
    You can disable the use of the `tagged` package using `-f-tagged`.
    .
    Disabing this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.

library
  build-depends: base >= 4.9 && < 5

  if !impl(mhs)
    if !impl(ghc >= 8.2)
      build-depends:
        base-orphans        >= 0.8.4 && < 1,
        transformers        >= 0.5   && < 0.7,
        transformers-compat >= 0.5   && < 0.8

      if flag(tagged)
        build-depends: tagged >= 0.8.6 && < 1

      hs-source-dirs: old-src/ghc801
      exposed-modules:
        Data.Bifoldable
        Data.Bitraversable

  ghc-options: -Wall
  default-language: Haskell2010
